[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerNameAndPicPanel/TowerName_Background.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerNameAndPicPanel/TowerNameAndPicPanel.gd" type="Script" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerNameAndPicPanel/TowerPic_Background.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/ExtraInfoPanelComponents/ExtraInfoButton.png" type="Texture" id=5]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerIngredientIcons/Ing_AddNewComponent.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerNameAndPicPanel/TierIcons/TierIcons_Tier01.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerIngredientIcons/IngredientIconPanel.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[node name="TowerNameAndPicPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 106.0
margin_bottom = 82.0
mouse_filter = 2
custom_constants/separation = 5

[node name="NameMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 106.0
margin_bottom = 17.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="NameBackground" type="TextureRect" parent="VBoxContainer/NameMarginer"]
margin_right = 106.0
margin_bottom = 17.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/NameMarginer"]
margin_right = 106.0
margin_bottom = 17.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4

[node name="Name" type="Label" parent="VBoxContainer/NameMarginer/Marginer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 102.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "Name"
align = 1
valign = 1

[node name="PicMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 106.0
margin_bottom = 82.0
mouse_filter = 2

[node name="PicBackground" type="TextureRect" parent="VBoxContainer/PicMarginer"]
margin_left = 23.0
margin_right = 83.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 6
texture = ExtResource( 4 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/PicMarginer"]
margin_right = 106.0
margin_bottom = 60.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="TowerPic" type="TextureRect" parent="VBoxContainer/PicMarginer/Marginer"]
margin_left = 53.0
margin_top = 30.0
margin_right = 53.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TowerExtraInfoButton" type="MarginContainer" parent="VBoxContainer/PicMarginer"]
margin_left = 92.0
margin_right = 106.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/PicMarginer/TowerExtraInfoButton"]
margin_right = 14.0
margin_bottom = 14.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PicMarginer"]
margin_right = 15.0
margin_bottom = 60.0
size_flags_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PicMarginer/MarginContainer"]
margin_right = 15.0
margin_bottom = 60.0
custom_constants/separation = 8

[node name="TierIcon" type="TextureRect" parent="VBoxContainer/PicMarginer/MarginContainer/VBoxContainer"]
margin_right = 15.0
margin_bottom = 14.0
size_flags_horizontal = 10
texture = ExtResource( 7 )

[node name="IngIcon" parent="VBoxContainer/PicMarginer/MarginContainer/VBoxContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 1.0
margin_top = 22.0
margin_right = 15.0
margin_bottom = 36.0
size_flags_horizontal = 10

[node name="IngIconOld" type="TextureRect" parent="VBoxContainer/PicMarginer/MarginContainer/VBoxContainer"]
visible = false
margin_left = 1.0
margin_top = 22.0
margin_right = 15.0
margin_bottom = 36.0
size_flags_horizontal = 10
texture = ExtResource( 6 )

[connection signal="pressed" from="VBoxContainer/PicMarginer/TowerExtraInfoButton/TextureButton" to="." method="_on_TextureButton_pressed"]
